discrim-codegen/tests/ui/not_enum.stderr
error: proc-macro derive panicked
 --> $DIR/not_enum.rs:3:10
  |
3 | #[derive(FromDiscriminant)]
  |          ^^^^^^^^^^^^^^^^
  |
  = help: message: input must be an enum
